--- a/src/components/adminPanel/MobileMenuButton/style.module.css
+++ b/src/components/adminPanel/MobileMenuButton/style.module.css
@@ -1,8 +1,8 @@
 .fab {
     position: fixed;
     bottom: 20px;
-    right: 20px;
-    z-index: 1200;
+    left: 20px;
+    z-index: 1300;
     display: none;
 }
 
